// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`almost eligible days remaining on length of stay > requirements met 1`] = `
[
  {
    "key": "usIdLsirLevelLowModerateForXDays",
    "text": "Currently moderate risk with no increase in risk level in past 360 days",
    "tooltip": "Assessed at low risk level on LSI-R with no risk increase in past 90 days or moderate risk level on LSI-R with no risk increase in past 360 days",
  },
  {
    "key": "negativeDaWithin90Days",
    "text": "Negative UA within past 90 days",
    "tooltip": "Negative UA within past 90 days, unless the client lacks a history of drug/alcohol abuse or has been supervised at low risk for more than one year",
  },
  {
    "key": "noFelonyWithin24Months",
    "text": "No felony convictions in past 24 months",
    "tooltip": "Has not committed a felony while on probation or parole in past 24 months",
  },
]
`;

exports[`almost eligible on probation at least a year > requirements met 1`] = `
[
  {
    "key": "usIdLsirLevelLowModerateForXDays",
    "text": "Currently moderate risk with no increase in risk level in past 360 days",
    "tooltip": "Assessed at low risk level on LSI-R with no risk increase in past 90 days or moderate risk level on LSI-R with no risk increase in past 360 days",
  },
  {
    "key": "negativeDaWithin90Days",
    "text": "Negative UA within past 90 days",
    "tooltip": "Negative UA within past 90 days, unless the client lacks a history of drug/alcohol abuse or has been supervised at low risk for more than one year",
  },
  {
    "key": "noFelonyWithin24Months",
    "text": "No felony convictions in past 24 months",
    "tooltip": "Has not committed a felony while on probation or parole in past 24 months",
  },
]
`;

exports[`fully eligible > requirements met 1`] = `
[
  {
    "key": "usIdLsirLevelLowModerateForXDays",
    "text": "Currently moderate risk with no increase in risk level in past 360 days",
    "tooltip": "Assessed at low risk level on LSI-R with no risk increase in past 90 days or moderate risk level on LSI-R with no risk increase in past 360 days",
  },
  {
    "key": "negativeDaWithin90Days",
    "text": "Negative UA within past 90 days",
    "tooltip": "Negative UA within past 90 days, unless the client lacks a history of drug/alcohol abuse or has been supervised at low risk for more than one year",
  },
  {
    "key": "noFelonyWithin24Months",
    "text": "No felony convictions in past 24 months",
    "tooltip": "Has not committed a felony while on probation or parole in past 24 months",
  },
  {
    "key": "pastEarnedDischargeEligibleDate",
    "text": "Served minimum sentence requirements: has served 2 years, 7 months",
    "tooltip": "If on probation, served minimum sentence according to the court; if on parole for a nonviolent crime, served at least one year; if on parole for a sex/violent offense, served at least one-third of remaining sentence; if on parole for a life sentence, served at least five years on parole",
  },
]
`;
